@@ -463,3 +463,8 @@ Wed Feb  3 08:51:10 CST 2016
 - [+] include/asm-generic/asm-offset.h		[D] <generared/asm-offset.h>, created in
 - [+] arch/x86/include/asm/asm-offset.h		 >  arch/x86/kernel/Makefile, then copied
 - [M] arch/x86/kernel/Makefile			 >  into generated directory.
+
+
+Thu Feb  4 09:56:32 CST 2016
+- [M] include/asm-generic/ptrace.h
+- [M] arch/x86/include/asm/ptrace.h
